--- a/trunk/src/tracing/importer/linux_perf/clock_parser_test.html
+++ b/trunk/src/tracing/importer/linux_perf/clock_parser_test.html
@@ -47,7 +47,7 @@ function testClock() {
   'fout_apll state=200000000 cpu_id=0',
 
   'cfinteractive-23    [000] d..2  8113.515254: clock_set_rate: ' +
-  'fout_apll state=500000000 cpu_id=0',
+  'fout_apll state=500000000 cpu_id=0'
   ];
 
   var m = new tracing.Model(lines.join('\n'), false);
