--- a/trunk/src/tracing/importer/linux_perf/gesture_parser_test.html
+++ b/trunk/src/tracing/importer/linux_perf/gesture_parser_test.html
@@ -102,7 +102,7 @@ function testGestureImport() {
           '<...>-1837  [000] ...1 875292.795219: tracing_mark_write: ' +
           'log: start: LogHardwareState',
           '<...>-1837  [000] ...1 875292.795231: tracing_mark_write: ' +
-          'log: end: LogHardwareState',
+          'log: end: LogHardwareState'
   ];
   var m = new tracing.Model(lines.join('\n'), false);
   assertEquals(0, m.importErrors.length);
@@ -169,7 +169,7 @@ function testUnusualStart() {
           'X-30368 [000] ...1 1819362.482047: tracing_mark_write: ' +
           'log: start: TimerLogOutputs',
           'X-30368 [000] ...1 1819362.482053: tracing_mark_write: ' +
-          'log: end: TimerLogOutputs',
+          'log: end: TimerLogOutputs'
   ];
   var m = new tracing.Model(lines.join('\n'), false);
   assertEquals(0, m.importErrors.length);
@@ -194,7 +194,7 @@ function testImportError() {
           'X-30368 [000] ...1 1819362.481982: tracing_mark_write: ' +
           'HandleTimer: end: ScalingFilterInterpreter',
           'X-30368 [000] ...1 1819362.481988: tracing_mark_write: ' +
-          'HandleTimer: end: IntegralGestureFilterInterpreter',
+          'HandleTimer: end: IntegralGestureFilterInterpreter'
   ];
   var m = new tracing.Model(lines.join('\n'), false);
   assertEquals(7, m.importErrors.length);
