--- a/trunk/src/tracing/importer/v8_log_importer_test.html
+++ b/trunk/src/tracing/importer/v8_log_importer_test.html
@@ -23,31 +23,31 @@ var V8LogImporter = tracing.importer.V8LogImporter;
 
 function testTickEventInSharedLibrary() {
   var lines = ['shared-library,"/usr/lib/libc++.1.dylib",0x99d8aae0,0x99dce729',
-               'tick,0x99d8aae4,0xbff02f08,12158,0,0x0,5',];
+               'tick,0x99d8aae4,0xbff02f08,12158,0,0x0,5'];
   var m = new tracing.Model(lines.join('\n'));
   var p = m.processes[-32];
   var threads = p.findAllThreadsNamed('V8 PC');
   var t = threads[0];
   assertEquals(1, t.samples.length);
-  assertEquals("/usr/lib/libc++.1.dylib", t.samples[0].title);
+  assertEquals('/usr/lib/libc++.1.dylib', t.samples[0].title);
 }
 
 function testTickEventInGeneratedCode() {
   var lines = ['shared-library,"/usr/lib/libc++.1.dylib",0x99d8aae0,0x99dce729',
                'code-creation,Stub,2,0x5b60ce80,1259,"StringAddStub"',
-               'tick,0x5b60ce84,0xbff02f08,12158,0,0x0,5',];
+               'tick,0x5b60ce84,0xbff02f08,12158,0,0x0,5'];
   var m = new tracing.Model(lines.join('\n'));
   var p = m.processes[-32];
   var threads = p.findAllThreadsNamed('V8 PC');
   var t = threads[0];
   assertEquals(1, t.samples.length);
-  assertEquals("StringAddStub", t.samples[0].title);
+  assertEquals('StringAddStub', t.samples[0].title);
 }
 
 function testTickEventInUknownCode() {
   var lines = ['shared-library,"/usr/lib/libc++.1.dylib",0x99d8aae0,0x99dce729',
                'code-creation,Stub,2,0x5b60ce80,1259,"StringAddStub"',
-               'tick,0x4,0xbff02f08,12158,0,0x0,5',];
+               'tick,0x4,0xbff02f08,12158,0,0x0,5'];
   var m = new tracing.Model(lines.join('\n'));
   var p = m.processes[-32];
   var threads = p.findAllThreadsNamed('V8 PC');
