--- a/trunk/src/tracing/filter_test.html
+++ b/trunk/src/tracing/filter_test.html
@@ -62,7 +62,8 @@ found in the LICENSE file.
     assertFalse(new CategoryFilter(['y']).matchSlice(s1));
     assertFalse(new CategoryFilter(['x', 'y']).matchSlice(s1));
 
-    var cNoCategory = tracing.test_utils.newCounterCategory(null, undefined, 'a');
+    var cNoCategory = tracing.test_utils.newCounterCategory(
+        null, undefined, 'a');
     assertTrue(new CategoryFilter(['x']).matchCounter(cNoCategory));
 
     var c0 = tracing.test_utils.newCounterCategory(null, 'x', 'a');
