--- a/trunk/src/tracing/record_selection_dialog_interactive_tests.html
+++ b/trunk/src/tracing/record_selection_dialog_interactive_tests.html
@@ -28,9 +28,9 @@ found in the LICENSE file.
      dlg.showSystemTracing = true;
      dlg.recordCallback = function() {
        var el = document.querySelector('.record-output');
-       el.innerText = "Category filter: " + dlg.categoryFilter() + "\n" +
-           "System Tracing: " + dlg.isSystemTracingEnabled() + "\n" +
-           "Continuous Tracing: " + dlg.isContinuousTracingEnabled();
+       el.innerText = 'Category filter: ' + dlg.categoryFilter() + '\n' +
+           'System Tracing: ' + dlg.isSystemTracingEnabled() + '\n' +
+           'Continuous Tracing: ' + dlg.isContinuousTracingEnabled();
      }
      dlg.updateForm_();
   }
