--- a/trunk/src/tracing/timeline_view_test.html
+++ b/trunk/src/tracing/timeline_view_test.html
@@ -53,9 +53,12 @@ found in the LICENSE file.
       var p1000 = model.getOrCreateProcess(1000);
       var objects = p1000.objects;
       objects.idWasCreated('0x1000', 'cc', 'LayerTreeHostImpl', 10);
-      objects.addSnapshot('0x1000', 'cc', 'LayerTreeHostImpl', 10, "snapshot-1");
-      objects.addSnapshot('0x1000', 'cc', 'LayerTreeHostImpl', 25, "snapshot-2");
-      objects.addSnapshot('0x1000', 'cc', 'LayerTreeHostImpl', 40, "snapshot-3");
+      objects.addSnapshot('0x1000', 'cc', 'LayerTreeHostImpl', 10,
+                          'snapshot-1');
+      objects.addSnapshot('0x1000', 'cc', 'LayerTreeHostImpl', 25,
+                          'snapshot-2');
+      objects.addSnapshot('0x1000', 'cc', 'LayerTreeHostImpl', 40,
+                          'snapshot-3');
       objects.idWasDeleted('0x1000', 'cc', 'LayerTreeHostImpl', 45);
       model.updateCategories_();
 
