--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -9,6 +9,7 @@ found in the LICENSE file.
 <title>All Tracing Tests</title>
 <script>
   G_allTests = [
+    'base_test.html',
     'base/bbox2_test.html',
     'base/color_test.html',
     'base/gl_matrix_test.html',
